[gd_scene load_steps=3 format=3 uid="uid://dkx3l5m02nde"]

[ext_resource type="Script" path="res://ui/player_inventory/player_inventory.gd" id="1_1is7l"]
[ext_resource type="Script" path="res://ui/adapter_interfaces/inventory_interface.gd" id="2_5qd65"]

[node name="PlayerInventory" type="Window"]
title = "PlayerInventory_Title"
initial_position = 2
size = Vector2i(800, 480)
script = ExtResource("1_1is7l")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/PanelContainer"]
layout_mode = 2

[node name="InventoryInterface" type="VBoxContainer" parent="HSplitContainer/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_5qd65")

[node name="PanelContainer2" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/PanelContainer2"]
layout_mode = 2

[node name="Info" type="VBoxContainer" parent="HSplitContainer/PanelContainer2/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="request_operation" from="HSplitContainer/PanelContainer/ScrollContainer/InventoryInterface" to="." method="_on_panel_request_operation"]
[connection signal="request_remote_operation" from="HSplitContainer/PanelContainer/ScrollContainer/InventoryInterface" to="." method="_on_panel_request_remote_operation"]
